# nflrunpass

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_pipeline.py  setup.py  st.txt
.github/: copilot-instructions.md
api/: main.py  nfl_api.postman_collection.json
archive/: README.md  et --hard HEAD~1
archive/nfl-playcall-ui/: package.json
archive/nfl-playcall-ui/components/: VerticalField.tsx
archive/webapp/nfl-playcall-ui/app/: page.tsx
archive/webapp/nfl-playcall-ui/components/: Scoreboard.tsx
data/raw/: sample_plays.csv
models/: feature_cols.json  log_reg_model.pkl  scaler.pkl
nfl_run_pass/: features.py  models.py  tuning.py
nflplaycaller.egg-info/: SOURCES.txt  requires.txt
notebooks/: kaggle-demo.ipynb  test.ipynb
src/nfl-run-pass/: test.ipynb
src/nfl_run_pass/: config.py  data_loading.py  evaluation.py  features.py  pipeline.py  preprocessing.py
src/nflplaycaller.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
steamlit/: steamlit_btm.py  streamlit_app.py  streamlit_beat_the_model.py
streamlit/: feature_cols.json  st_app.py  streamlit_app.py  streamlit_app_improved.py
tests/: test_data_loading.py  test_features.py  test_preprocessing.py
webapp/nfl-playcall-ui/: package-lock.json
webapp/nfl-playcall-ui/app/: globals.css  layout.tsx  page.tsx
webapp/nfl-playcall-ui/components/: Scoreboard.tsx  VerticalField.tsx
